# Axiom

./: README.md  axiom.py  pyproject.toml
docs/: architecture.md  architecture_spec.md  cli.md  concept_analysis.md  contextflow.md  plugins.md  quickstart.md  roadmap.md  schema.md  schema_definitions.md  workflow.md
examples/support_router/: run.py
examples/support_router/registry/: base.support_agent.json  prompt.detect_intent.json  prompt.refund_handler.json  workflow.support_router.json
src/axiom/: __init__.py  exceptions.py  models.py  registry.py
src/axiom/adapters/: __init__.py  base.py  langchain_adapter.py  openai_adapter.py
src/axiom/registry/: __init__.py  core.py  loader.py
src/axiom/runtime/: __init__.py  engine.py
src/axiom/schemas/: __init__.py  base.py  execution_plan.py  prompt.py  skill.py  template.py  usecase.py
src/axiom_cli/: __init__.py  main.py
tests/: test_adapters.py  test_models.py  test_registry.py  test_remote_registry.py  test_runtime.py  test_schemas.py  test_search.py
