[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "axiom-core"
version = "1.0.0"
authors = [
  { name="Axiom Authors", email="authors@axiom.dev" },
]
description = "Universal schema-based deterministic runtime for LLM prompts, skills, and AI compositions."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]
dependencies = [
    "pydantic>=2.0.0",
    "PyYAML>=6.0"
]

[project.scripts]
axiom = "axiom_cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
